# tm5_control

./: README.md
sophia_test/: CMakeLists.txt  package.xml
sophia_test/launch/: holo_demo.launch
sophia_test/src/: find_target_qr2bone.cpp  self_camera_info.py  tm_move2target_line.cpp
tm_cotrol_interface/: CMakeLists.txt  hololens_demo  package.xml
tm_cotrol_interface/src/: control_stage.py  target_pub_test.cpp  tm_move2target_line.cpp
